--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 				</div>
 				<div class="modal-body">
 				<form>
-					<div class="form-group mt-2">
-						<label for="username"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Username:</label>
+					<div class="form-group">
+						<label for="username" ><i class="fa fa-user-circle-o" aria-hidden="true"></i>Username:</label>
 							<input type="text" name="Username" id="username" class="form-control">
-						<label for="password"><i class="fa fa-unlock-alt" aria-hidden="true"></i>Password:</label>
+						<label for="password" class="mt-3"><i class="fa fa-unlock-alt" aria-hidden="true"></i>Password:</label>
 							<input type="text" name="Username" id="password" class="form-control">
-						<label for="email"><i class="fa fa-envelope" aria-hidden="true"></i>E-mail:</label>
+						<label for="email" class="mt-3"><i class="fa fa-envelope" aria-hidden="true"></i>E-mail:</label>
 							<input type="text" name="Username" id="email" class="form-control">
 					</div>
 				</form>	
